# llm_w_langchain

./: .env.example  Makefile  README.md  pyproject.toml
llm_w_langchain/: __main__.py
llm_w_langchain/first_application/: __init__.py
llm_w_langchain/ice_breaker/: __init__.py  linkedin.py  linkedin_scraper.py
